# serializer version: 1
# name: test_device_tracker_setup[device_tracker.my_laptop-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.my_laptop',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'my-laptop',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'my-laptop',
    'platform': 'arris_tg2492lg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '11:22:33:44:55:66',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.my_laptop-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-laptop',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'my-laptop',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.178.11',
      <ScannerEntityStateAttribute.MAC: 'mac'>: '11:22:33:44:55:66',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.my_laptop',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_tracker_setup[device_tracker.my_phone-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.my_phone',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'my-phone',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'my-phone',
    'platform': 'arris_tg2492lg',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:BB:CC:DD:EE:FF',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.my_phone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-phone',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'my-phone',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.178.10',
      <ScannerEntityStateAttribute.MAC: 'mac'>: 'AA:BB:CC:DD:EE:FF',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.my_phone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
